--- a/metawallet-ui/package.json
+++ b/metawallet-ui/package.json
@@ -2,8 +2,8 @@
   "name": "metawallet-ui",
   "version": "1.0.0",
   "description": "metawallet-ui",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^6.1.0"
   }
 }
